# python_words

./: .gitignore  pyproject.toml
docs/: README.md
src/python_words/: __init__.py  config.py  main.py  puzzle_creator.py  wordfinder.py
src/python_words/Puzzles/Sample/: 1.json  10.json  11.json  12.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
src/python_words/help_strings/: creating-puzzles.txt  wordfinder-commands.txt
tests/: __init__.py  test_config.py  test_main.py
