[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python_words"
version = "3.0.0"
description = "A modern Python project boilerplate"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "ebignumber", email = "ebignumber@tutamail.com"}
]
keywords = ["puzzle", "words", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "windows-curses; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ebignumber/python-words"
Documentation = "https://github.com/ebignumber/python-words#readme"
Repository = "https://github.com/ebignumber/python-words.git"
Issues = "https://github.com/ebignumber/python-words/issues"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = ["tests"]

[project.scripts]
python_words = "python_words.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
python_words = ['Puzzles/**/*.json', 'help_strings/**/*.txt']
